--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@awesome-cordova-plugins/file": "^6.3.0",
+    "@awesome-cordova-plugins/file-opener": "^6.3.0",
+    "@capacitor/android": "4.6.2",
     "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.6.3",
+    "@capacitor/camera": "^4.1.4",
+    "@capacitor/core": "4.6.2",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.2",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@ionic-native/in-app-browser": "^5.36.0",
+    "@ionic/lab": "^3.2.15",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
+    "@microsoft/signalr": "^7.0.2",
+    "@mui/material": "^5.11.5",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
@@ -19,13 +30,22 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^1.2.3",
+    "cordova-plugin-file": "^7.0.0",
+    "cordova-plugin-file-opener2": "^3.0.5",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "jetifier": "^2.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.7.0",
+    "react-spring": "^9.6.1",
+    "swiper": "^8.4.6",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
