--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 11
 
       - name: Setup Node.js
-        uses: actions/setup-node
+        uses: actions/setup-node@v3.6.0
         with:
           node-version: 16.x
 
