--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: 16.x
 
       - name: Install IONIC
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
         run: npm install -g @ionic/cli
 
       - name: Install APP dependencies
