--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,13 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install IONIC
+      - name: Limit heap space
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
+        run: npm start
+      
+
+      - name: Install IONIC
         run: npm install -g @ionic/cli
 
       - name: Install APP dependencies
