--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,19 +18,17 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3.6.0
         with:
-          node-version: 16.x
-
-      - name: Limit heap space
-        run: |
-          export NODE_OPTIONS="--max_old_space_size=4096"
-          npm start
-      
+          node-version: 16.x      
 
       - name: Install IONIC
         run: npm install -g @ionic/cli
 
       - name: Install APP dependencies
         run: npm install
+        
+      - name: Limit heap
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
 
       - name: Build Ionic APP
         run: ionic build --verbose
