--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install APP dependencies
         run: npm install
         
-      - name: Limit heap
+      - name: Limit heap test
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
 
