--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         run: npm install
         
       - name: Build Ionic APP
+        env:
+          CI: ""
         run: ionic --max_old_space_size=2048 build
 
       - name: Generate Android  files
