--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,18 @@ jobs:
         run: ionic --max_old_space_size=2048 build
 
       - name: Generate Android  files
+        env:
+          CI: ""
         run: ionic capacitor copy android
 
       - name: Build Dev Version Android
+        env:
+          CI: ""
         run: ionic capacitor build android
 
       - name: Build Release version Android
+        env:
+          CI: ""
         run: ionic capacitor build android --release --prod 
 
       
