--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,12 +55,10 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app-dev
-          #path: ${{ github.workspace }}/packages/app/android/app/build/outputs/bundle/release/*.apk
-          run: ls
+          path: .android/apk/*.apk
 
       - name: Upload release bundle
         uses: actions/upload-artifact@v1
         with:
           name: app-release
-          #path: ${{ github.workspace }}/packages/app/android/app/build/outputs/bundle/release/*.aab
-          run: ls
+          path: .android/apk/*.aab
