--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,10 +55,10 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app-dev
-          path: .android/apk/*.apk
+          path: android/apk/*.apk
 
       - name: Upload release bundle
         uses: actions/upload-artifact@v1
         with:
           name: app-release
-          path: .android/apk/*.aab
+          path: android/apk/*.aab
