--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,15 +50,18 @@ jobs:
       - name: Generate the Android App Bundle
         working-directory: ./android/
         run: ./gradlew bundle
+    
+      - name: debug
+        run: ls
 
-      - name: Upload dev APK
-        uses: actions/upload-artifact@v1
-        with:
-          name: app-dev
-          path: android/apk/*.apk
+#      - name: Upload dev APK
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: app-dev
+#          path: android/apk/*.apk
 
-      - name: Upload release bundle
-        uses: actions/upload-artifact@v1
-        with:
-          name: app-release
-          path: android/apk/*.aab
+#      - name: Upload release bundle
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: app-release
+#          path: android/apk/*.aab
