--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,9 @@ jobs:
         working-directory: ./android/
         run: ./gradlew bundle
   
+      - name: debug again
+        run:  ls ./android/app/build/outputs/bundle/release/
+  
       - name: Upload dev APK
         uses: actions/upload-artifact@v1
         with:
