--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,13 +58,13 @@ jobs:
         run:  pwd ./android/app/build/outputs/bundle/release/
   
       - name: Upload dev APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: app-dev
           path: ./android/app/build/outputs/bundle/release/*.aab
 
       - name: Upload release bundle
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: app-release
-          path: ./android/app/build/outputs/bundle/release/*.aab
+          path: ./android/app/build/outputs/apk/debug/*.apk
