Updated for version number

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,77 +10,5 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v3
 
-      - name: Setup JAVA
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3.6.0
-        with:
-          node-version: 16.x      
-
-      - name: Install IONIC
-        run: npm install -g @ionic/cli
-
-      - name: Install APP dependencies
-        run: npm install
-        
-      - name: Build Ionic APP
-        env:
-          CI: ""
-        run: ionic --max_old_space_size=2048 build
-
-      - name: Generate Android  files
-        env:
-          CI: ""
-        run: ionic capacitor copy android
-
-      - name: Build Dev Version Android
-        env:
-          CI: ""
-        run: ionic capacitor build android
-
-      - name: Build Release version Android
-        env:
-          CI: ""
-        run: ionic capacitor build android --release --prod 
-
-      - name: Generate the debug APK
-        working-directory: ./android/
-        run: ./gradlew assemble
-      
-      - name: Generate the Android App Bundle
-        working-directory: ./android/
-        run: ./gradlew bundle
-    
-      - name: Sign the release bundle
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: ./android/app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.ANDROIDKEYSTORE }}
-          alias: ${{ secrets.KEYSTOREALIAS }}
-          keyStorePassword: ${{ secrets.KEYSTOREPASS }}
-          keyPassword: ${{ secrets.KEYSTOREPASS }}
-      
-      - name: Sign the dev APK
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: ./android/app/build/outputs/apk/debug
-          signingKeyBase64: ${{ secrets.ANDROIDKEYSTORE }}
-          alias: ${{ secrets.KEYSTOREALIAS }}
-          keyStorePassword: ${{ secrets.KEYSTOREPASS }}
-          keyPassword: ${{ secrets.KEYSTOREPASS }}
-          
-  
-      - name: Upload Release APP
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-release
-          path: ./android/app/build/outputs/bundle/release/*.aab
-
-      - name: Upload dev APP
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-dev
-          path: ./android/app/build/outputs/apk/debug/*.apk
+      - name: Test increment var
+        run: echo ${{GITHUB_RUN_NUMBER}}
