--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test increment var
-        run: echo $vars.GITHUB_RUN_NUMBER
+        run: echo "${{ github.run_number }}"
