--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Build for Android
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -11,4 +14,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test increment var
-        run: echo "${{ github.run_number }}"
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}"
