--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Test increment var
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}"
+        env:
+          build_s: ${GITHUB_REF#refs/*/}
+          build_n: ${build_s:5:3}
+        run: echo "The build string is $build_s \nThe build number is $build_n"
